--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,51 +6,61 @@
     android:layout_height="match_parent"
     tools:context=".HistoryFragment">
 
-    <RelativeLayout
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="5dp"-->
+        <!--android:background="#ffffff"-->
+        <!--android:padding="15dp">-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/imageView"-->
+            <!--android:layout_width="90dp"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:layout_weight="0.11"-->
+            <!--android:src="@mipmap/kintan" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/restaurant_name"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_toEndOf="@id/imageView"-->
+            <!--android:layout_toRightOf="@id/imageView"-->
+            <!--android:text="Kintan Buffet"-->
+            <!--android:textColor="#333"-->
+            <!--android:textSize="20dp"-->
+            <!--android:textStyle="bold" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/date"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/restaurant_name"-->
+            <!--android:layout_toEndOf="@id/imageView"-->
+            <!--android:layout_toRightOf="@id/imageView"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="12 Apr 2999, 10.00am"-->
+            <!--android:textColor="#333"-->
+            <!--android:textSize="16dp" />-->
+
+        <!--<RatingBar-->
+            <!--android:id="@+id/ratingBar"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/date"-->
+            <!--android:layout_toEndOf="@id/imageView"-->
+            <!--android:layout_toRightOf="@id/imageView" />-->
+
+    <!--</RelativeLayout>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/history_rv_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/lbl_not_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:background="#ffffff"
-        android:padding="15dp">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_weight="0.11"
-            android:src="@mipmap/kintan" />
-
-        <TextView
-            android:id="@+id/restaurant_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/imageView"
-            android:layout_toRightOf="@id/imageView"
-            android:text="Kintan Buffet"
-            android:textColor="#333"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/restaurant_name"
-            android:layout_toEndOf="@id/imageView"
-            android:layout_toRightOf="@id/imageView"
-            android:layout_weight="1"
-            android:text="12 Apr 2999, 10.00am"
-            android:textColor="#333"
-            android:textSize="16dp" />
-
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/date"
-            android:layout_toEndOf="@id/imageView"
-            android:layout_toRightOf="@id/imageView" />
-
-    </RelativeLayout>
+        android:text="You must login"/>
 </FrameLayout>
