--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -63,4 +63,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="You must login"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
