--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -5,43 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".FavoriteFragment">
 
-    <RelativeLayout
-        android:id="@+id/layout_click"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/favorite_rv_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:background="#ffffff"
-        android:padding="15dp">
+        android:layout_height="match_parent"/>
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_weight="0.11"
-            android:src="@mipmap/kintan" />
-
-        <TextView
-            android:id="@+id/restaurant_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/imageView"
-            android:layout_toRightOf="@id/imageView"
-            android:text="Kintan Buffet"
-            android:textColor="#333"
-            android:textSize="28dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/restaurant_name"
-            android:layout_toEndOf="@id/imageView"
-            android:layout_toRightOf="@id/imageView"
-            android:layout_weight="1"
-            android:text="Location: Mall Central Park, Jakarta Barat Jl. Letjen S. Parman No.28"
-            android:textColor="#333"
-            android:textSize="16dp" />
-    </RelativeLayout>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
