--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,162 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AccountFragment">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/layout_login"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/navigationbar"
-            android:background="@drawable/bar"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"/>
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/profilepicture"
-            android:layout_below="@+id/navigationbar"
-            android:background="@drawable/profilepicture"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:layout_width="90dp"
-            android:layout_height="90dp" />
+            <!--<ImageView-->
+                <!--android:id="@+id/navigationbar"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:background="@drawable/bar" />-->
 
-        <TextView
-            android:id="@+id/fullname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="38dp"
-            android:layout_marginTop="28dp"
-            android:layout_below="@+id/navigationbar"
-            android:layout_toRightOf="@id/profilepicture"
-            android:fontFamily="sans-serif-black"
-            android:text="Juan Tirtayana"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:textSize="26dip"/>
+            <ImageView
+                android:id="@+id/profilepicture"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/profilepicture" />
 
-        <TextView
-            android:id="@+id/location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/fullname"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="3dp"
-            android:layout_toRightOf="@id/locationlogo"
-            android:fontFamily="sans-serif-medium"
-            android:text="Jakarta"
-            android:textSize="13dip"/>
+            <TextView
+                android:id="@+id/fullname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="38dp"
+                android:layout_marginTop="28dp"
+                android:layout_toRightOf="@id/profilepicture"
+                android:fontFamily="sans-serif-black"
+                android:text="Fullname"
+                android:textColor="#000000"
+                android:textSize="26dip"
+                android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/locationlogo"
-            android:layout_marginLeft="36dp"
-            android:layout_below="@id/fullname"
-            android:layout_toRightOf="@id/profilepicture"
-            android:background="@drawable/lcoation"
-            android:layout_width="23dp"
-            android:layout_height="23dp"/>
-        <ImageView
-            android:id="@+id/settinglogo"
-            android:layout_below="@id/profilepicture"
-            android:layout_marginTop="3dp"
-            android:layout_marginLeft="39dp"
-            android:background="@drawable/settinglogo"
-            android:layout_width="16dp"
-            android:layout_height="16dp"/>
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fullname"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="3dp"
+                android:layout_toRightOf="@id/locationlogo"
+                android:fontFamily="sans-serif-medium"
+                android:text="Location"
+                android:textSize="13dip"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/profilepicture"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="4dp"
-            android:layout_toRightOf="@id/settinglogo"
-            android:fontFamily="sans-serif-medium"
-            android:text="Edit Profile"
-            android:textSize="10dip" />
+            <ImageView
+                android:id="@+id/locationlogo"
+                android:layout_marginLeft="36dp"
+                android:layout_below="@id/fullname"
+                android:layout_toRightOf="@id/profilepicture"
+                android:background="@drawable/lcoation"
+                android:layout_width="23dp"
+                android:layout_height="23dp"/>
 
-        <ImageView
-            android:id="@+id/orangebar"
-            android:layout_marginTop="12dp"
-            android:layout_below="@id/settinglogo"
-            android:background="@drawable/bar"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"/>
+            <LinearLayout
+                android:id="@+id/layout_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/profilepicture"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="39dp">
 
-        <TextView
-            android:id="@+id/feeds"
-            android:layout_below="@+id/orangebar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:text="Feeds"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20dip"/>
+                <ImageView
+                    android:id="@+id/settinglogo"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/settinglogo"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"/>
 
-        <ImageView
-            android:layout_below="@+id/feeds"
-            android:background="@drawable/bar"
-            android:layout_width="match_parent"
-            android:layout_height="3dp" />
-        <ImageView
-            android:id="@+id/listbar"
-            android:layout_below="@id/feeds"
-            android:layout_marginTop="3dp"
-            android:background="@drawable/bargrey"
-            android:layout_width="match_parent"
-            android:layout_height="8dp"/>
-        <ImageView
-            android:id="@+id/listpic"
-            android:layout_marginLeft="3dp"
-            android:layout_below="@id/listbar"
-            android:background="@mipmap/kintan"
-            android:layout_marginTop="4dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            />
-        <TextView
-            android:id="@+id/restaurant_name"
-            android:text="Kintan Buffet"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="#000"
-            android:textSize="20dip"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_below="@id/listbar"
-            android:layout_toRightOf="@+id/listpic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <RatingBar
-            android:layout_toRightOf="@+id/restaurant_name"
-            android:layout_below="@id/listbar"
-            android:layout_marginTop="7dp"
-            android:layout_marginLeft="50dp"
-            android:numStars="5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleX="1.5"
-            android:scaleY="1.5"
-            style="?android:attr/ratingBarStyleSmall"/>
-        <TextView
-            android:layout_below="@id/restaurant_name"
-            android:layout_toRightOf="@id/listpic"
-            android:layout_marginLeft="10dp"
-            android:textSize="15dip"
-            android:text="Review:"
-            android:fontFamily="sans-serif-medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:layout_below="@id/listpic"
-            android:layout_marginTop="3dp"
-            android:background="@drawable/bar"
-            android:layout_width="match_parent"
-            android:layout_height="8dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_toRightOf="@id/settinglogo"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Edit Profile"
+                    android:textSize="10dip" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/orangebar"
+                android:layout_marginTop="12dp"
+                android:layout_below="@id/layout_setting"
+                android:background="@drawable/bar"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"/>
+
+            <TextView
+                android:id="@+id/feeds"
+                android:layout_below="@+id/orangebar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:text="Feeds"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20dip"/>
+
+            <ImageView
+                android:layout_below="@+id/feeds"
+                android:background="@drawable/bar"
+                android:layout_width="match_parent"
+                android:layout_height="3dp" />
+            <ImageView
+                android:id="@+id/listbar"
+                android:layout_below="@id/feeds"
+                android:layout_marginTop="3dp"
+                android:background="@drawable/bargrey"
+                android:layout_width="match_parent"
+                android:layout_height="8dp"/>
+            <ImageView
+                android:id="@+id/listpic"
+                android:layout_marginLeft="3dp"
+                android:layout_below="@id/listbar"
+                android:background="@mipmap/kintan"
+                android:layout_marginTop="4dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                />
+            <TextView
+                android:id="@+id/restaurant_name"
+                android:text="Kintan Buffet"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="#000"
+                android:textSize="20dip"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_below="@id/listbar"
+                android:layout_toRightOf="@+id/listpic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <RatingBar
+                android:layout_toRightOf="@+id/restaurant_name"
+                android:layout_below="@id/listbar"
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="50dp"
+                android:numStars="5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleX="1.5"
+                android:scaleY="1.5"
+                style="?android:attr/ratingBarStyleSmall"/>
+            <TextView
+                android:layout_below="@id/restaurant_name"
+                android:layout_toRightOf="@id/listpic"
+                android:layout_marginLeft="10dp"
+                android:textSize="15dip"
+                android:text="Review:"
+                android:fontFamily="sans-serif-medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_below="@id/listpic"
+                android:layout_marginTop="3dp"
+                android:background="@drawable/bar"
+                android:layout_width="match_parent"
+                android:layout_height="8dp"/>
         </RelativeLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/layout_not_login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorWhiteBlurry">
+
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="250dp"
+                android:layout_marginEnd="8dp"
+                android:text="Not login yet!"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="Login"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+        </android.support.constraint.ConstraintLayout>
+
+    </FrameLayout>
 
 </FrameLayout>
