--- a/app/src/main/res/layout/activity_restaurant_info.xml
+++ b/app/src/main/res/layout/activity_restaurant_info.xml
@@ -18,6 +18,7 @@
             app:srcCompat="@drawable/susasana"/>
 
         <TextView
+            android:id="@+id/lbl_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textAlignment="center"
@@ -26,17 +27,20 @@
             android:textColor="#000000"
             android:textStyle="bold" />
         <TextView
+            android:id="@+id/lbl_address"
             android:text="Jl. Letjen S. Parman, Kb. Jeruk, Kota Jakarta Barat"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="50dp" />
         <TextView
+            android:id="@+id/lbl_eatery"
             android:text="Eatery Type: Buffet"
             android:textSize="20sp"
             android:textColor="#000"
             android:layout_width="wrap_content"
             android:layout_height="40dp" />
         <TextView
+            android:id="@+id/lbl_opening"
             android:text="Opening Hours: Mon-Sun (10am-22pm)"
             android:textSize="20sp"
             android:textColor="#000"
