--- a/app/src/main/res/layout/favorite_rv_view_item.xml
+++ b/app/src/main/res/layout/favorite_rv_view_item.xml
@@ -18,7 +18,7 @@
             android:layout_weight="0.11" />
 
         <TextView
-            android:id="@+id/restaurant_name"
+            android:id="@+id/menu_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -33,7 +33,7 @@
             android:id="@+id/restaurant_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/restaurant_name"
+            android:layout_below="@id/menu_name"
             android:layout_toEndOf="@id/imageView"
             android:layout_toRightOf="@id/imageView"
             android:layout_weight="1"
