--- a/app/src/main/res/layout/payment_method.xml
+++ b/app/src/main/res/layout/payment_method.xml
@@ -18,29 +18,57 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <ImageView
+        android:layout_below="@+id/msgbar"
+        android:background="@drawable/bar"
+        android:layout_centerHorizontal="true"
+        android:layout_width="360dp"
+        android:layout_height="8dp" />
+    <ImageView
+        android:rotation="270dp"
+        android:layout_toLeftOf="@+id/choose_payment"
+        android:layout_below="@+id/msgbar"
+        android:background="@drawable/bar"
+        android:layout_centerHorizontal="true"
+        android:layout_width="8dp"
+        android:layout_height="470dp" />
+    <ImageView
+        android:rotation="270dp"
+        android:layout_toRightOf="@+id/choose_payment"
+        android:layout_below="@+id/msgbar"
+        android:background="@drawable/bar"
+        android:layout_centerHorizontal="true"
+        android:layout_width="8dp"
+        android:layout_height="470dp" />
+    <ImageView
+        android:layout_below="@id/choose_payment"
+        android:background="@drawable/bar"
+        android:layout_centerHorizontal="true"
+        android:layout_width="360dp"
+        android:layout_height="8dp" />
+    <ImageView
         android:id="@+id/choose_payment"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/msgbar"
         android:background="@drawable/bargrey"
         android:layout_centerInParent="true"
-        android:layout_width="355dp"
-        android:layout_height="480dp" />
+        android:layout_width="345dp"
+        android:layout_height="460dp" />
     <ImageView
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="70dp"
         android:layout_marginLeft="230dp"
         android:layout_below="@id/msgbar"
         android:background="@drawable/transferbank"
         android:layout_width="100dp"
         android:layout_height="90dp" />
     <ImageView
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="160dp"
         android:layout_marginLeft="230dp"
         android:layout_below="@+id/msgbar"
         android:background="@drawable/mobilebanking1"
         android:layout_width="70dp"
         android:layout_height="60dp" />
     <ImageView
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="253dp"
         android:layout_marginLeft="230dp"
         android:layout_below="@+id/msgbar"
         android:background="@drawable/virtualaccount"
@@ -49,7 +77,7 @@
     <ImageView
         android:background="@drawable/mastercardvisa"
         android:layout_below="@+id/msgbar"
-        android:layout_marginTop="290dp"
+        android:layout_marginTop="340dp"
         android:layout_marginLeft="230dp"
         android:layout_width="90dp"
         android:layout_height="60dp" />
@@ -60,7 +88,7 @@
         android:layout_height="wrap_content">
         <RadioButton
             android:id="@+id/transferbank"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="80dp"
             android:layout_marginRight="200dp"
             android:text="Trasnfer Bank"
             android:textStyle="bold"
@@ -94,4 +122,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RadioGroup>
+    <Button
+        android:layout_marginTop="14dp"
+        android:layout_below="@+id/choose_payment"
+        android:id="@+id/btn_choosepayment"
+        android:background="@drawable/registerbutton"
+        android:textStyle="bold"
+        android:layout_width="390dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-medium"
+        android:text="Continue"/>
 </RelativeLayout>
