--- a/app/src/main/res/layout/activity_booking_form.xml
+++ b/app/src/main/res/layout/activity_booking_form.xml
@@ -14,7 +14,7 @@
         android:layout_width="355dp"
         android:layout_height="480dp" />
     <Button
-        android:id="@+id/picktimedate"
+        android:id="@+id/pick_timedate"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="120dp"
         android:text="Pick Date and Time"
@@ -25,8 +25,8 @@
         android:layout_width="240dp"
         android:layout_height="35dp" />
     <TextView
-        android:id="@+id/timeandate"
-        android:layout_below="@+id/picktimedate"
+        android:id="@+id/pick_result"
+        android:layout_below="@+id/pick_timedate"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="Time And Date"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/peopledetail"
-        android:layout_below="@+id/timeandate"
+        android:layout_below="@+id/pick_result"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="130dp"
         android:text="How many People:"
@@ -58,6 +58,7 @@
         android:inputType="number"
         android:fontFamily="sans-serif-condensed"
         android:hint="1-10"
+        android:textAlignment="center"
         android:textSize="23dip"/>
     <Button
         android:layout_marginTop="6dp"
